--- a/宠物游戏.html
+++ b/宠物游戏.html
@@ -21,8 +21,8 @@
 <body>
     <div class="xky">
         <div class="xz">
-            <h1>宠物游戏</h1>
-            <button> <a href="../02xingkangyi/宠物养成.html">宠物养成</a></button>       
+            <h1>宠物游戏Vermouth</h1>
+            <button> <a href="../02xingkangyi/宠物养成.html">宠物养成</a></button>
             <button> <a href="../02xingkangyi/宠物对战.html">宠物对战</a></button>
         </div>
     </div>
